--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
             <div class="gallery-grid gallery-masonry">
                 <div class="gallery-item large" data-category="commercial">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Brand Identity System" data-description="A comprehensive visual identity designed from the ground up — including logo, color palette, typography system, and brand guidelines. Built to create a cohesive and memorable brand presence across all touchpoints." data-tools="Illustrator, Photoshop, InDesign" data-year="2025" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #E8453C 0%, #D4A574 100%); aspect-ratio: 16/10;">
                             <span>Brand Identity Project</span>
                         </div>
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="commercial">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Packaging Design" data-description="Elegant product packaging and label design that stands out on the shelf. Focused on tactile materials, print finishes, and a premium unboxing experience that elevates the product." data-tools="Illustrator, Dimension" data-year="2024" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #2D2D2D 0%, #555 100%); aspect-ratio: 1/1;">
                             <span>Packaging Design</span>
                         </div>
@@ -188,7 +188,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="commercial">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Logo Design Collection" data-description="A curated collection of logomarks and wordmarks crafted for various clients. Each logo distills a brand's essence into a simple, versatile mark that works across digital and print media." data-tools="Illustrator" data-year="2023–2025" data-client="Various">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #D4A574 0%, #F5E6D3 100%); aspect-ratio: 1/1;">
                             <span>Logo Design</span>
                         </div>
@@ -199,7 +199,7 @@
                     </div>
                 </div>
                 <div class="gallery-item wide" data-category="commercial">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Print Campaign" data-description="Multi-format print advertising campaign spanning billboards, magazine spreads, and transit posters. Bold visuals paired with sharp copywriting to capture attention and drive brand recall." data-tools="Photoshop, InDesign" data-year="2025" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #1a1a2e 0%, #E8453C 100%); aspect-ratio: 21/9;">
                             <span>Print Campaign</span>
                         </div>
@@ -225,7 +225,7 @@
             </div>
             <div class="gallery-grid gallery-masonry">
                 <div class="gallery-item" data-category="marketing">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Email Campaign Design" data-description="Eye-catching email templates and newsletter designs optimized for engagement. Responsive layouts with strong visual hierarchy that drive click-through rates and subscriber retention." data-tools="Figma, Mailchimp" data-year="2024" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); aspect-ratio: 1/1;">
                             <span>Email Campaign</span>
                         </div>
@@ -236,7 +236,7 @@
                     </div>
                 </div>
                 <div class="gallery-item large" data-category="marketing">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Digital Ad Campaign" data-description="Full-suite digital advertising design across Google Display, Meta, and programmatic platforms. Designed multiple ad sizes with A/B variations to maximize performance and brand consistency." data-tools="Photoshop, Figma, After Effects" data-year="2025" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%); aspect-ratio: 16/10;">
                             <span>Ad Campaign</span>
                         </div>
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="marketing">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Brochure Design" data-description="Print and digital brochure design combining striking photography with clean typography. Tri-fold and multi-page formats tailored for trade shows, sales teams, and direct mail." data-tools="InDesign, Photoshop" data-year="2024" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%); aspect-ratio: 3/4;">
                             <span>Brochure Design</span>
                         </div>
@@ -258,7 +258,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="marketing">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Landing Page Design" data-description="High-converting landing page designs with bold hero sections, clear value propositions, and optimized call-to-action placement. Designed to guide the visitor from curiosity to conversion." data-tools="Figma, Webflow" data-year="2025" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #fa709a 0%, #fee140 100%); aspect-ratio: 4/3;">
                             <span>Landing Page</span>
                         </div>
@@ -284,7 +284,7 @@
             </div>
             <div class="gallery-grid social-grid">
                 <div class="gallery-item" data-category="social">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Instagram Content" data-description="Curated feed posts and carousel designs that maintain brand consistency while stopping the scroll. Each post is designed with platform-specific best practices for maximum engagement." data-tools="Photoshop, Canva Pro" data-year="2024–2025" data-client="Various">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #E8453C 0%, #ff6b6b 100%); aspect-ratio: 1/1;">
                             <span>Instagram Post</span>
                         </div>
@@ -295,7 +295,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="social">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Stories & Reels Design" data-description="Vertical format content designed for Instagram and TikTok. Bold typography, smooth transitions, and engaging motion graphics that keep viewers watching until the end." data-tools="After Effects, Photoshop" data-year="2025" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #a18cd1 0%, #fbc2eb 100%); aspect-ratio: 9/16;">
                             <span>Story Design</span>
                         </div>
@@ -306,7 +306,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="social">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Brand Templates" data-description="Reusable social media template systems that empower marketing teams to create on-brand content independently. Includes quote cards, announcements, testimonials, and product features." data-tools="Figma, Canva Pro" data-year="2024" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #ffecd2 0%, #fcb69f 100%); aspect-ratio: 1/1;">
                             <span>Brand Templates</span>
                         </div>
@@ -317,7 +317,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="social">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Campaign Graphics" data-description="Social media campaign visuals for product launches and seasonal promotions. Designed as cohesive multi-post series with a unified visual language that builds anticipation." data-tools="Photoshop, Illustrator" data-year="2025" data-client="Confidential">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); aspect-ratio: 1/1;">
                             <span>Campaign Graphics</span>
                         </div>
@@ -328,7 +328,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="social">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Platform Banners" data-description="Custom headers and cover images designed for Twitter/X, LinkedIn, YouTube, and Facebook. Each banner is optimized for platform-specific dimensions and visual impact." data-tools="Photoshop" data-year="2024" data-client="Various">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #2D2D2D 0%, #E8453C 100%); aspect-ratio: 16/9;">
                             <span>Twitter/X Banner</span>
                         </div>
@@ -339,7 +339,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="social">
-                    <div class="gallery-card">
+                    <div class="gallery-card" data-title="Highlight Covers" data-description="Custom Instagram highlight cover icons and sets that tie a profile together visually. Minimal, branded icons designed to complement the overall feed aesthetic." data-tools="Illustrator" data-year="2024" data-client="Various">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #D4A574 0%, #F5E6D3 100%); aspect-ratio: 1/1;">
                             <span>Highlight Covers</span>
                         </div>
@@ -365,7 +365,7 @@
             </div>
             <div class="gallery-grid album-grid">
                 <div class="gallery-item" data-category="album">
-                    <div class="gallery-card vinyl-card">
+                    <div class="gallery-card vinyl-card" data-title="Album Cover Art" data-description="Full album cover artwork including front, back, and spine design for vinyl and CD formats. A deep collaboration with the artist to visually translate the sonic mood into a single powerful image." data-tools="Photoshop, Illustrator" data-year="2025" data-client="Independent Artist">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #0c0c0c 0%, #E8453C 50%, #0c0c0c 100%); aspect-ratio: 1/1;">
                             <span>Album Cover I</span>
                         </div>
@@ -377,7 +377,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="album">
-                    <div class="gallery-card vinyl-card">
+                    <div class="gallery-card vinyl-card" data-title="EP Artwork" data-description="Cover art for an extended play release blending photography and digital illustration. Warm tones and textured overlays create an intimate, nostalgic feeling that mirrors the music." data-tools="Photoshop, Procreate" data-year="2024" data-client="Independent Artist">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #1a1a2e 0%, #D4A574 50%, #1a1a2e 100%); aspect-ratio: 1/1;">
                             <span>Album Cover II</span>
                         </div>
@@ -389,7 +389,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="album">
-                    <div class="gallery-card vinyl-card">
+                    <div class="gallery-card vinyl-card" data-title="Single Release Cover" data-description="Bold, minimal single artwork designed for digital streaming platforms. Optimized for thumbnail visibility while maintaining artistic impact at full resolution." data-tools="Illustrator, Photoshop" data-year="2025" data-client="Independent Artist">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #2D2D2D 0%, #667eea 50%, #2D2D2D 100%); aspect-ratio: 1/1;">
                             <span>Album Cover III</span>
                         </div>
@@ -401,7 +401,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="album">
-                    <div class="gallery-card vinyl-card">
+                    <div class="gallery-card vinyl-card" data-title="Deluxe Edition Packaging" data-description="Premium deluxe edition packaging design including gatefold vinyl, lyric booklet, poster insert, and limited edition slipcase. Every detail crafted to create a collectible experience." data-tools="InDesign, Photoshop, Illustrator" data-year="2024" data-client="Record Label">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #0c0c0c 0%, #f093fb 50%, #0c0c0c 100%); aspect-ratio: 1/1;">
                             <span>Album Cover IV</span>
                         </div>
@@ -428,7 +428,7 @@
             </div>
             <div class="gallery-grid painting-grid">
                 <div class="gallery-item tall" data-category="painting">
-                    <div class="gallery-card painting-card">
+                    <div class="gallery-card painting-card" data-title="Untitled I" data-description="An exploration of warmth and transition through layered acrylic washes. Reds bleed into golds, creating an emotional gradient that evokes sunsets and the passage of time." data-tools="Acrylic on canvas" data-year="2025" data-client="24 &times; 36 in.">
                         <div class="gallery-placeholder" style="background: linear-gradient(180deg, #E8453C 0%, #D4A574 40%, #F5E6D3 100%); aspect-ratio: 3/4;">
                             <span>Painting I</span>
                         </div>
@@ -440,7 +440,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="painting">
-                    <div class="gallery-card painting-card">
+                    <div class="gallery-card painting-card" data-title="Untitled II" data-description="Deep indigo and crimson collide in this oil painting that explores contrast and tension. Heavy impasto brushwork creates a tactile surface that changes with viewing angle and light." data-tools="Oil on canvas" data-year="2024" data-client="20 &times; 20 in.">
                         <div class="gallery-placeholder" style="background: linear-gradient(180deg, #1a1a2e 0%, #E8453C 100%); aspect-ratio: 1/1;">
                             <span>Painting II</span>
                         </div>
@@ -452,7 +452,7 @@
                     </div>
                 </div>
                 <div class="gallery-item" data-category="painting">
-                    <div class="gallery-card painting-card">
+                    <div class="gallery-card painting-card" data-title="Untitled III" data-description="Mixed media piece combining acrylic paint, found paper, and metallic leaf. Layers of texture create a dialogue between the organic and the manufactured, the precious and the discarded." data-tools="Mixed media on panel" data-year="2024" data-client="18 &times; 24 in.">
                         <div class="gallery-placeholder" style="background: linear-gradient(135deg, #D4A574 0%, #2D2D2D 100%); aspect-ratio: 4/3;">
                             <span>Painting III</span>
                         </div>
@@ -464,7 +464,7 @@
                     </div>
                 </div>
                 <div class="gallery-item tall" data-category="painting">
-                    <div class="gallery-card painting-card">
+                    <div class="gallery-card painting-card" data-title="Untitled IV" data-description="Delicate watercolor washes flow from deep violet to warm cream, capturing the fleeting quality of light through water. Controlled wet-on-wet technique creates soft, dreamlike edges." data-tools="Watercolor on paper" data-year="2025" data-client="14 &times; 20 in.">
                         <div class="gallery-placeholder" style="background: linear-gradient(180deg, #667eea 0%, #F5E6D3 100%); aspect-ratio: 2/3;">
                             <span>Painting IV</span>
                         </div>
@@ -476,7 +476,7 @@
                     </div>
                 </div>
                 <div class="gallery-item wide" data-category="painting">
-                    <div class="gallery-card painting-card">
+                    <div class="gallery-card painting-card" data-title="Untitled V" data-description="A large-scale panoramic piece that moves through the full emotional spectrum — from fiery passion to quiet contemplation. Bold, gestural strokes create a sense of movement across the wide canvas." data-tools="Acrylic on canvas" data-year="2025" data-client="60 &times; 24 in.">
                         <div class="gallery-placeholder" style="background: linear-gradient(90deg, #E8453C 0%, #D4A574 30%, #667eea 70%, #2D2D2D 100%); aspect-ratio: 21/9;">
                             <span>Painting V</span>
                         </div>
@@ -519,6 +519,33 @@
             </div>
         </div>
     </section>
+
+    <!-- Lightbox Modal -->
+    <div class="lightbox" id="lightbox">
+        <button class="lightbox-close" id="lightboxClose" aria-label="Close">&times;</button>
+        <div class="lightbox-content">
+            <div class="lightbox-image" id="lightboxImage"></div>
+            <div class="lightbox-details">
+                <div class="lightbox-category" id="lightboxCategory"></div>
+                <h3 class="lightbox-title" id="lightboxTitle"></h3>
+                <p class="lightbox-description" id="lightboxDescription"></p>
+                <div class="lightbox-meta">
+                    <div class="meta-item" id="metaTools">
+                        <span class="meta-label">Tools</span>
+                        <span class="meta-value" id="lightboxTools"></span>
+                    </div>
+                    <div class="meta-item" id="metaYear">
+                        <span class="meta-label">Year</span>
+                        <span class="meta-value" id="lightboxYear"></span>
+                    </div>
+                    <div class="meta-item" id="metaClient">
+                        <span class="meta-label">Client / Size</span>
+                        <span class="meta-value" id="lightboxClient"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Footer -->
     <footer class="footer">
