--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Inter:wght@300;400;500;600&family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Flip Disc Background -->
+    <canvas id="flip-disc-canvas"></canvas>
+
     <!-- Cursor paint trail canvas -->
     <canvas id="paint-cursor-canvas"></canvas>
 
