update to style

--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@300;400;500;600&family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-    <!-- Flip Disc Background -->
-    <canvas id="flip-disc-canvas"></canvas>
-
-    <!-- Cursor paint trail canvas -->
-    <canvas id="paint-cursor-canvas"></canvas>
+    <!-- Flow Field Background -->
+    <canvas id="flow-field-canvas"></canvas>
 
     <!-- Navigation -->
     <nav class="main-nav" id="mainNav">
@@ -71,16 +68,16 @@
                     <g class="brush-strokes">
                         <path class="stroke stroke-1" d="M 30 100 Q 80 60, 180 80 Q 260 95, 340 75 Q 400 60, 440 85" fill="none" stroke="#444" stroke-width="55" stroke-linecap="round" opacity="0.4" filter="url(#rough-edge)"/>
                         <path class="stroke stroke-2" d="M 460 90 Q 520 65, 580 85 Q 640 100, 700 70 Q 760 50, 850 80" fill="none" stroke="#333" stroke-width="55" stroke-linecap="round" opacity="0.4" filter="url(#rough-edge)"/>
-                        <path class="stroke stroke-accent" d="M 100 180 Q 200 200, 350 175 Q 500 155, 650 180 Q 750 195, 820 170" fill="none" stroke="#555" stroke-width="4" stroke-linecap="round" opacity="0.3" filter="url(#rough-edge)"/>
+                        <path class="stroke stroke-accent" d="M 100 180 Q 200 200, 350 175 Q 500 155, 650 180 Q 750 195, 820 170" fill="none" stroke="#CC2936" stroke-width="4" stroke-linecap="round" opacity="0.3" filter="url(#rough-edge)"/>
                     </g>
 
                     <!-- Splatter dots -->
                     <g class="splatters">
-                        <circle class="splatter" cx="50" cy="65" r="3" fill="#555" opacity="0.3"/>
+                        <circle class="splatter" cx="50" cy="65" r="3" fill="#CC2936" opacity="0.3"/>
                         <circle class="splatter" cx="420" cy="55" r="2" fill="#444" opacity="0.25"/>
-                        <circle class="splatter" cx="870" cy="60" r="4" fill="#333" opacity="0.3"/>
+                        <circle class="splatter" cx="870" cy="60" r="4" fill="#CC2936" opacity="0.3"/>
                         <circle class="splatter" cx="250" cy="110" r="2" fill="#555" opacity="0.25"/>
-                        <circle class="splatter" cx="680" cy="105" r="3" fill="#444" opacity="0.3"/>
+                        <circle class="splatter" cx="680" cy="105" r="3" fill="#CC2936" opacity="0.3"/>
                         <circle class="splatter" cx="150" cy="50" r="2" fill="#555" opacity="0.2"/>
                         <circle class="splatter" cx="550" cy="45" r="2" fill="#333" opacity="0.2"/>
                     </g>
